--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3306/library?useSSL=false&allowPublicKeyRetrieval=true"
     username: "root"
-    password: "local2024!@#"
+    password: "Local2024!@#"
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
